# UBB-Projects

./: .gitignore
First year/First semester/Computer Systems Architecture/: 1.asm  2.asm  3.asm  4.asm  exam1.asm  exam2.asm  exam3.asm  module1.asm  module2.asm  module3.asm  numbers.txt  probleme.asm  tema8.asm
First year/First semester/Fundamentals of Programming/a1-Forquosh/: p1.py  p2.py  p3.py
First year/First semester/Fundamentals of Programming/a2-Forquosh/: p1.py
First year/First semester/Fundamentals of Programming/a3-Forquosh/: p1.py
First year/First semester/Fundamentals of Programming/a4-Forquosh/: backtracking.py  dynamic_programming.py
First year/First semester/Mathematical Analysis/: homework_10.py  unique_plots.py
First year/Second semester/Data Structures and Algorithms/MultiMap/: App.cpp  CMakeLists.txt  ExtendedTest.cpp  MultiMap.cpp  MultiMap.h  MultiMapIterator.cpp  MultiMapIterator.h  ShortTest.cpp
First year/Second semester/Data Structures and Algorithms/SortedBagHash/: CMakeLists.txt  ShortTest.cpp  SortedBag.cpp  SortedBag.h  SortedBagIterator.cpp  SortedBagIterator.h
First year/Second semester/Data Structures and Algorithms/SortedIndexedList/: CMakeLists.txt  ListIterator.cpp  ListIterator.h  ShortTest.cpp  SortedIndexedList.cpp  SortedIndexedList.h
First year/Second semester/Graph Algorithms/: directed_graph.py  graph_output.txt  main.py  paths.txt  pw3-4.txt  random_graph1.txt  random_graph2.txt
First year/Second semester/OOP/oop-a1-Forquosh/: CMakeLists.txt  (+2 more)
First year/Second semester/OOP/oop-a2-3-Forquosh/: CMakeLists.txt  README.md  start.c
First year/Second semester/OOP/oop-a2-3-Forquosh/domain/: domain.c  domain.h
First year/Second semester/OOP/oop-a2-3-Forquosh/repository/: repository.c  repository.h
First year/Second semester/OOP/oop-a2-3-Forquosh/services/: services.c  services.h
First year/Second semester/OOP/oop-a2-3-Forquosh/tests/: tests.h  tests_domain.c  tests_repository.c  tests_service.c
First year/Second semester/OOP/oop-a2-3-Forquosh/ui/: ui.c
First year/Second semester/OOP/oop-a4-5-Forquosh/: CMakeLists.txt  README.md  start.cpp
First year/Second semester/OOP/oop-a4-5-Forquosh/Domain/: Dog.cpp  Dog.h
First year/Second semester/OOP/oop-a4-5-Forquosh/Repository/: repository.cpp  repository.h
First year/Second semester/OOP/oop-a4-5-Forquosh/Services/: services.h  services_admin.cpp  services_user.cpp
First year/Second semester/OOP/oop-a4-5-Forquosh/Tests/: tests_repository.cpp  tests_services_admin.cpp  tests_services_user.cpp
First year/Second semester/OOP/oop-a4-5-Forquosh/UI/: ui.h  ui_admin.cpp  ui_user.cpp
First year/Second semester/OOP/oop-a6-7-Forquosh/: CMakeLists.txt  dogs.html  dogs.txt  start.cpp
First year/Second semester/OOP/oop-a6-7-Forquosh/Repository/: repository.cpp
First year/Second semester/OOP/oop-a6-7-Forquosh/Services/: services.h  services_admin.cpp  services_user.cpp
First year/Second semester/OOP/oop-a6-7-Forquosh/Tests/: tests_domain.cpp  tests_services_user.cpp
First year/Second semester/OOP/oop-a6-7-Forquosh/UI/: ui.h  ui_admin.cpp  ui_user.cpp
First year/Second semester/OOP/oop-a8-9-Forquosh/: CMakeLists.txt  README.md  dogs.csv  dogs.html  gui.cpp  gui.h  gui.ui  start.cpp
First year/Second semester/OOP/oop-a8-9-Forquosh/Domain/: Dog.cpp  Dog.h
First year/Second semester/OOP/oop-a8-9-Forquosh/Repository/: repository.h
First year/Second semester/OOP/oop-a8-9-Forquosh/Services/: services_user.cpp
First year/Second semester/OOP/oop-a8-9-Forquosh/Tests/: tests.h  tests_domain.cpp  tests_repository.cpp  tests_services_admin.cpp
First year/Second semester/OOP/oop-a8-9-Forquosh/UI/: ui.h  ui_admin.cpp  ui_user.cpp
First year/Second semester/OOP/oop-e-913-916-Forquosh/: CMakeLists.txt  README.md  companygui.cpp  companygui.h  companygui.ui  couriergui.cpp  couriergui.h  couriergui.ui  couriers.txt  domain.cpp  domain.h  main.cpp  packages.txt  repository.cpp  repository.h  session.cpp  session.h  subject.cpp  subject.h
First year/Second semester/OOP/oop-t1-Forquosh/: CMakeLists.txt  domain.cpp  domain.h  repository.cpp  repository.h  service.cpp  service.h  start.cpp  tests.cpp  tests.h  ui.cpp  ui.h
First year/Second semester/OOP/oop-t2-Forquosh/: CMakeLists.txt  block.cpp  block.h  building.cpp  building.h  house.cpp  house.h  main.cpp  service.cpp  service.h  ui.cpp  ui.h
First year/Second semester/OOP/oop-t3-Forquosh/: CMakeLists.txt  domain.cpp  domain.h  equations.txt  gui.cpp  gui.h  gui.ui  main.cpp  repository.cpp  repository.h  service.cpp  service.h
First year/Second semester/OOP/practical_exam_prep/: CMakeLists.txt  chat.ui  chat_session.cpp  chat_session.h  chat_window.cpp  chat_window.h  main.cpp  message.cpp  message.h  observer.h  subject.cpp  subject.h  user.cpp  user.h  user_message.cpp  user_message.h
Second year/First Semester/Advanced Methods of Programming/: log1.txt  log3.txt  log4.txt  log5.txt  log8.txt
Second year/First Semester/Computer Networks/: Lab7(partial).pkt  Topology.pkt  imparteala.txt  imparteala2.txt  impartealaLab6.txt  impartealaLab7-R0_subnetworks.txt  impartealaLab7-R1-R2-R3.txt  impartealaLab7.txt  impartealaTopology.txt
Second year/First Semester/Databases/: BankQuery.sql  BooksQuery.sql  CinemaQuery.sql  IndexesQuery.sql  InsertQuery.sql  Lab4Script.sql  Misc.sql  OperationsQuery.sql  ProceduresQuery.sql  TestsNViewsQuery.sql  WomenShoesQuery.sql  ZooQuery.sql
Second year/First Semester/Logical and Functional Programming/: MergeSortGPT.txt  Sem1.pl  Sem2.txt  Sem3.pl  Sem4.pl  Sem7.lisp  Sem7.pl  TEST_PROLOG.pl  TEST_PROLOG.txt  ex1.2-lecture6.pl  ex1.4-lecture6.pl  examprep.txt  l1-13.lisp  l1-2.lisp  l1-4.lisp  l1-4.txt  l2-10.lisp  l2-10.txt  l3-10.lisp  l3-3  l3-3.lisp  l3-7.lisp  l3-8.lisp  misc.txt  p1-7.pl  p2-1.txt  p3-11.pl  p3-15.pl  p3-6.pl  p3-6.txt  p3-7.pl  p3-8.pl  p3-9.pl  pregatire_T1.txt  test.lisp
Second year/First Semester/Probability and Statistics/: lab2ex1.m  lab3ex1.m  lab3ex2.m  lab4.m  lab5.m  test.m
Third year/First semester/Public Key Cryptography/: lab1.py
(+676 files in other folders)
